--- a/static/index.html
+++ b/static/index.html
@@ -194,6 +194,87 @@
             color: var(--muted);
         }
 
+        .meta-row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 0.5rem;
+            font-size: 0.9rem;
+            color: var(--muted);
+        }
+
+        .ghost {
+            background: transparent;
+            border: none;
+            color: var(--primary);
+            font-weight: 600;
+            cursor: pointer;
+            padding: 0.25rem 0.5rem;
+        }
+
+        .ghost:hover {
+            text-decoration: underline;
+        }
+
+        .split {
+            display: grid;
+            gap: 2rem;
+        }
+
+        @media (min-width: 960px) {
+            .split {
+                grid-template-columns: minmax(0, 1fr) 340px;
+                align-items: start;
+            }
+        }
+
+        .composer {
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
+
+        .preview-panel {
+            background: var(--secondary);
+            border: 1px solid var(--border);
+            border-radius: 1rem;
+            padding: 1.25rem;
+            box-shadow: inset 0 0 0 1px rgba(15, 23, 42, 0.04);
+        }
+
+        .preview-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1rem;
+            font-weight: 600;
+        }
+
+        .preview-content {
+            background: #fff;
+            border-radius: 0.75rem;
+            border: 1px solid rgba(148, 163, 184, 0.35);
+            padding: 1.25rem;
+            min-height: 200px;
+            max-height: 420px;
+            overflow: auto;
+            line-height: 1.6;
+            color: #1e293b;
+        }
+
+        .preview-content pre {
+            background: #0f172a;
+            color: #e2e8f0;
+            padding: 1rem;
+            border-radius: 0.75rem;
+            overflow-x: auto;
+        }
+
+        .preview-placeholder {
+            color: var(--muted);
+            font-style: italic;
+        }
+
         footer {
             text-align: center;
             color: var(--muted);
@@ -201,6 +282,7 @@
             padding: 2rem 1.5rem 3rem;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" integrity="sha384-Ys4LFQgJt6KRnE//v/WLDsPfyW4Mf4lEt9RBx0jCkIlvqdyeJRe87pUzgf+m9MHf" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -208,65 +290,83 @@
         <p>Create a paste in seconds and share the link anywhere.</p>
     </header>
 
-    <main>
-        <section class="card">
-            <div class="field">
-                <label for="content">Your text</label>
-                <textarea id="content" placeholder="Type or paste your text here..."></textarea>
-            </div>
-
-            <div class="grid">
+    <main class="split">
+        <section class="card composer">
+            <div>
                 <div class="field">
-                    <label for="format">Format</label>
-                    <select id="format">
-                        <option value="plain_text">Plain text</option>
-                        <option value="markdown">Markdown</option>
-                        <option value="code">Code block</option>
-                        <option value="json">JSON (pretty print)</option>
-                    </select>
-                    <div class="meta-note">Choose how the paste is rendered when viewed.</div>
+                    <label for="content">Your text</label>
+                    <textarea id="content" placeholder="Type or paste your text here..."></textarea>
+                </div>
+
+                <div class="grid">
+                    <div class="field">
+                        <label for="format">Format</label>
+                        <select id="format">
+                            <option value="plain_text">Plain text</option>
+                            <option value="markdown">Markdown</option>
+                            <option value="code">Code block</option>
+                            <option value="json">JSON (pretty print)</option>
+                        </select>
+                        <div class="meta-note">Choose how the paste is rendered when viewed.</div>
+                    </div>
+
+                    <div class="field">
+                        <label for="retention">Retention</label>
+                        <select id="retention">
+                            <option value="0">No expiry</option>
+                            <option value="10">10 minutes</option>
+                            <option value="60">1 hour</option>
+                            <option value="1440">24 hours</option>
+                            <option value="10080">7 days</option>
+                            <option value="43200" selected>30 days</option>
+                        </select>
+                        <div class="meta-note">Pastes are removed automatically after the selected window.</div>
+                    </div>
                 </div>
 
                 <div class="field">
-                    <label for="retention">Retention</label>
-                    <select id="retention">
-                        <option value="0">No expiry</option>
-                        <option value="10">10 minutes</option>
-                        <option value="60">1 hour</option>
-                        <option value="1440">24 hours</option>
-                        <option value="10080">7 days</option>
+                    <label for="encryption-mode">Encryption</label>
+                    <select id="encryption-mode">
+                        <option value="none">None</option>
+                        <option value="aes256_gcm">AES-256-GCM (client provided key)</option>
                     </select>
-                    <div class="meta-note">Pastes are removed automatically after the selected window.</div>
+                    <div class="meta-note">Use encryption for sensitive snippets. Remember to share the key separately.</div>
+                </div>
+
+                <div class="field" id="encryption-key-field" style="display:none;">
+                    <label for="encryption-key">Encryption key</label>
+                    <input type="password" id="encryption-key" placeholder="Enter a strong key" autocomplete="off" />
+                    <div class="meta-note">Key is never stored. Recipients must supply it to decrypt the paste.</div>
                 </div>
             </div>
 
-            <div class="field">
-                <label for="encryption-mode">Encryption</label>
-                <select id="encryption-mode">
-                    <option value="none">None</option>
-                    <option value="aes256_gcm">AES-256-GCM (client provided key)</option>
-                </select>
-                <div class="meta-note">Use encryption for sensitive snippets. Remember to share the key separately.</div>
-            </div>
+            <div>
+                <div class="actions">
+                    <button id="create">Create paste</button>
+                    <span class="status" id="status">Ready</span>
+                </div>
 
-            <div class="field" id="encryption-key-field" style="display:none;">
-                <label for="encryption-key">Encryption key</label>
-                <input type="password" id="encryption-key" placeholder="Enter a strong key" autocomplete="off" />
-                <div class="meta-note">Key is never stored. Recipients must supply it to decrypt the paste.</div>
-            </div>
-
-            <div class="actions">
-                <button id="create">Create paste</button>
-                <span class="status" id="status">Ready</span>
-            </div>
-
-            <div id="success" class="success"></div>
-            <div id="error" class="error"></div>
-            <div id="result" class="result">
-                <strong>Your paste link:</strong>
-                <a id="paste-url" href="#" target="_blank" rel="noopener"></a>
+                <div id="success" class="success"></div>
+                <div id="error" class="error"></div>
+                <div id="result" class="result">
+                    <div class="meta-row">
+                        <strong>Your paste link:</strong>
+                        <button class="ghost" id="copy-link">Copy</button>
+                    </div>
+                    <a id="paste-url" href="#" target="_blank" rel="noopener"></a>
+                </div>
             </div>
         </section>
+
+        <aside class="preview-panel">
+            <div class="preview-header">
+                <span>Live preview</span>
+                <button class="ghost" id="reset-preview">Clear</button>
+            </div>
+            <div id="preview" class="preview-content">
+                <div class="preview-placeholder">Start typing to preview content.</div>
+            </div>
+        </aside>
     </main>
 
     <footer>
@@ -287,6 +387,9 @@
         const successBox = document.getElementById('success');
         const resultBox = document.getElementById('result');
         const pasteLink = document.getElementById('paste-url');
+        const copyButton = document.getElementById('copy-link');
+        const previewContainer = document.getElementById('preview');
+        const resetPreviewBtn = document.getElementById('reset-preview');
 
         function resetAlerts() {
             errorBox.style.display = 'none';
@@ -313,7 +416,47 @@
                 encryptionKeyField.style.display = 'none';
                 encryptionKeyInput.value = '';
             }
+            renderPreview();
         });
+
+        function escapeHtml(value) {
+            const div = document.createElement('div');
+            div.textContent = value;
+            return div.innerHTML;
+        }
+
+        function renderPreview() {
+            const text = textarea.value.trim();
+            const format = formatSelect.value;
+
+            if (!text) {
+                previewContainer.innerHTML = '<div class="preview-placeholder">Start typing to preview content.</div>';
+                return;
+            }
+
+            if (format === 'markdown' && typeof marked !== 'undefined') {
+                previewContainer.innerHTML = marked.parse(text, { breaks: true });
+                return;
+            }
+
+            if (format === 'json') {
+                try {
+                    const parsed = JSON.parse(text);
+                    const pretty = JSON.stringify(parsed, null, 2);
+                    previewContainer.innerHTML = `<pre>${escapeHtml(pretty)}</pre>`;
+                } catch (err) {
+                    previewContainer.innerHTML = `<div class="preview-placeholder">${escapeHtml(err.message)}. Showing raw input.</div><pre>${escapeHtml(text)}</pre>`;
+                }
+                return;
+            }
+
+            if (format === 'code') {
+                previewContainer.innerHTML = `<pre><code>${escapeHtml(text)}</code></pre>`;
+                return;
+            }
+
+            previewContainer.innerHTML = `<pre>${escapeHtml(text)}</pre>`;
+        }
 
         async function createPaste() {
             const content = textarea.value.trim();
@@ -364,11 +507,12 @@
                 }
 
                 const fullUrl = new URL(path, window.location.origin).toString();
-                pasteLink.textContent = fullUrl;
-                pasteLink.href = fullUrl;
+                pasteLink.textContent = fullUrl + (encryptionKey ? `?key=${encodeURIComponent(encryptionKey)}` : '');
+                pasteLink.href = fullUrl + (encryptionKey ? `?key=${encodeURIComponent(encryptionKey)}` : '');
                 resultBox.style.display = 'block';
                 status.textContent = 'Link ready';
                 textarea.value = '';
+                renderPreview();
 
                 if (navigator.clipboard?.writeText) {
                     try {
@@ -395,6 +539,33 @@
                 createPaste();
             }
         });
+        textarea.addEventListener('input', () => {
+            resetAlerts();
+            status.textContent = 'Ready';
+            renderPreview();
+        });
+        formatSelect.addEventListener('change', renderPreview);
+        resetPreviewBtn.addEventListener('click', () => {
+            textarea.value = '';
+            renderPreview();
+            resetAlerts();
+            status.textContent = 'Ready';
+        });
+        copyButton.addEventListener('click', async () => {
+            const link = pasteLink.href;
+            if (!link) {
+                showError('Create a paste before copying the link.');
+                return;
+            }
+            try {
+                await navigator.clipboard.writeText(link);
+                showSuccess('Link copied to clipboard');
+            } catch (err) {
+                showError('Unable to copy automatically. Copy the link manually.');
+            }
+        });
+
+        renderPreview();
     </script>
 </body>
 </html>
